[package]
name = "nget"
version = "0.0.0"
edition = "2021"
authors = ["Octoape <octoape@qq.com>"]
description = "A network resource downloader."
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/enjoycoding/nget"
repository = "https://github.com/enjoycoding/nget"

[dependencies]
